--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <section id="monitoring" class="menu-section">
       <h2>Monitoring Component</h2>
       <button onclick="addNewComponent()">➕ Add New Component</button>
+      <button onclick="saveToGitHubFile()">💾 Save All to GitHub</button>
       <table id="componentTable">
         <thead>
           <tr>
