--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Component Life EM</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="data:,"> <!-- Hindari error favicon -->
 </head>
 <body>
   <header>
@@ -16,11 +17,15 @@
   </header>
 
   <main>
+    <!-- Menu 1: Monitoring Component -->
     <section id="monitoring" class="menu-section">
       <h2>Monitoring Component</h2>
-      <button onclick="addNewComponent()">➕ Add New Component</button>
-      <button onclick="saveToGitHubFile()">💾 Save All to GitHub</button>
-      <table id="componentTable">
+      <div style="margin-bottom: 10px;">
+button onclick="addNewComponent()">➕ Add New Component</button>
+        <button onclick="saveToGitHubFile()">💾 Save All to GitHub</button>
+        <button onclick="loadFromGitHubFile()">🔄 Load Data from GitHub</button>
+      </div>
+      <table id="componentTable" border="1" cellpadding="5">
         <thead>
           <tr>
             <th>Equipment</th><th>Model</th><th>SMCS</th><th>Component</th><th>Freq</th><th>Cost</th>
@@ -32,6 +37,7 @@
       </table>
     </section>
 
+    <!-- Menu 2: Update Current SMU -->
     <section id="smu" class="menu-section" style="display:none;">
       <h2>Update Current SMU</h2>
       <form onsubmit="updateSMU(event)">
