--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <section id="monitoring" class="menu-section">
       <h2>Monitoring Component</h2>
       <div style="margin-bottom: 10px;">
-button onclick="addNewComponent()">➕ Add New Component</button>
+        <button onclick="addNewComponent()">➕ Add New Component</button>
         <button onclick="saveToGitHubFile()">💾 Save All to GitHub</button>
         <button onclick="loadFromGitHubFile()">🔄 Load Data from GitHub</button>
       </div>
-      <table id="componentTable" border="1" cellpadding="5">
+      <table id="componentTable">
         <thead>
           <tr>
             <th>Equipment</th><th>Model</th><th>SMCS</th><th>Component</th><th>Freq</th><th>Cost</th>
