--- a/index.html
+++ b/index.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Component Life EM</title>
-<link href="style.css" rel="stylesheet"/>
-<link href="data:," rel="icon"/> <!-- Hindari error favicon -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Component Life EM</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="data:,"> <!-- Hindari error favicon -->
 </head>
 <body>
-<header>
-<h1>Component Life EM</h1>
-<nav>
-<button onclick="showMenu('monitoring')">Monitoring Component</button>
-<button onclick="showMenu('smu')">Current SMU</button>
-</nav>
-</header>
-<main>
-<!-- Menu 1: Monitoring Component -->
-<section class="menu-section" id="monitoring">
-<h2>Monitoring Component</h2>
-<div style="margin-bottom: 10px;">
-<button onclick="addNewComponent()">➕ Add New Component</button>
-<button onclick="saveToGitHubFile()">💾 Save All to GitHub</button>
-<button onclick="loadFromGitHubFile()">🔄 Load Data from GitHub</button>
-</div>
-<table id="componentTable">
-<thead>
-<tr>
-<th>Equipment</th><th>Model</th><th>SMCS</th><th>Component</th><th>Freq</th><th>Cost</th>
-<th>Change Out</th><th>Next Change</th><th>SMU</th><th>Life</th><th>%</th><th>Rating</th>
-<th>Foto</th><th>Remarks</th><th>Action</th>
-<th>Rating</th><th>Remarks</th></tr>
-</thead>
-<tbody></tbody>
-</table>
-</section>
-<!-- Menu 2: Update Current SMU -->
-<section class="menu-section" id="smu" style="display:none;">
-<h2>Update Current SMU</h2>
-<form onsubmit="updateSMU(event)">
-<input id="equipmentInput" placeholder="Equipment" required="" type="text"/>
-<input id="smuInput" placeholder="SMU" required="" type="number"/>
-<button type="submit">Update</button>
-</form>
-</section>
-</main>
-<script src="script.js"></script>
+  <header>
+    <h1>Component Life EM</h1>
+    <nav>
+      <button onclick="showMenu('monitoring')">Monitoring Component</button>
+      <button onclick="showMenu('smu')">Current SMU</button>
+    </nav>
+  </header>
+
+  <main>
+    <!-- Menu 1: Monitoring Component -->
+    <section id="monitoring" class="menu-section">
+      <h2>Monitoring Component</h2>
+      <div style="margin-bottom: 10px;">
+        <button onclick="addNewComponent()">➕ Add New Component</button>
+        <button onclick="saveToGitHubFile()">💾 Save All to GitHub</button>
+        <button onclick="loadFromGitHubFile()">🔄 Load Data from GitHub</button>
+      </div>
+      <table id="componentTable">
+        <thead>
+          <tr>
+            <th>Equipment</th><th>Model</th><th>SMCS</th><th>Component</th><th>Freq</th><th>Cost</th>
+            <th>Change Out</th><th>Next Change</th><th>SMU</th><th>Life</th><th>%</th><th>Rating</th>
+            <th>Foto</th><th>Remarks</th><th>Action</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </section>
+
+    <!-- Menu 2: Update Current SMU -->
+    <section id="smu" class="menu-section" style="display:none;">
+      <h2>Update Current SMU</h2>
+      <form onsubmit="updateSMU(event)">
+        <input type="text" id="equipmentInput" placeholder="Equipment" required />
+        <input type="number" id="smuInput" placeholder="SMU" required />
+        <button type="submit">Update</button>
+      </form>
+    </section>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
