--- a/index.html
+++ b/index.html
@@ -1,53 +1,345 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Component Life EM</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="data:,"> <!-- Hindari error favicon -->
+  <meta charset="UTF-8">
+  <title>📑 FAR & CANIBAL</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f5f6fa;
+    }
+    header {
+      background: #34495e;
+      color: white;
+      padding: 10px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 18px;
+    }
+    .tabs {
+      display: flex;
+      gap: 6px;
+    }
+    .tabs button {
+      padding: 6px 12px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 13px;
+      background: #2c3e50;
+      color: #fff;
+    }
+    .tabs button.active {
+      background: #1abc9c;
+      font-weight: bold;
+    }
+    .container {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      gap: 20px;
+      padding: 15px;
+      height: calc(100vh - 60px);
+      box-sizing: border-box;
+    }
+    .card {
+      background: white;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+      display: flex;
+      flex-direction: column;
+    }
+    .card h2 {
+      margin: 0 0 10px;
+      font-size: 15px;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 6px;
+    }
+    form input, form textarea, form button {
+      width: 100%;
+      padding: 7px;
+      margin-bottom: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 13px;
+      box-sizing: border-box;
+    }
+    form button {
+      background: #34495e;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    form button:hover { background: #2c3e50; }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      font-size: 12px;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 6px;
+      text-align: left;
+    }
+    th {
+      background: #34495e;
+      color: white;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+    }
+    .table-wrapper {
+      flex: 1;
+      overflow-y: auto;
+    }
+    .thumbnail {
+      max-width: 50px;
+      max-height: 40px;
+      border-radius: 4px;
+    }
+    .pdf-icon {
+      font-size: 13px;
+      color: #e74c3c;
+      font-weight: bold;
+    }
+    .actions button {
+      margin: 1px;
+      padding: 3px 6px;
+      font-size: 11px;
+      border-radius: 4px;
+      border: none;
+      cursor: pointer;
+      color: white;
+    }
+    .view-btn { background: #3498db; }
+    .download-btn { background: #9b59b6; }
+    .delete-btn { background: #e74c3c; }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Component Life EM</h1>
-    <nav>
-      <button onclick="showMenu('monitoring')">Monitoring Component</button>
-      <button onclick="showMenu('smu')">Current SMU</button>
-    </nav>
+    <h1>📑 FAR & CANIBAL</h1>
+    <div class="tabs">
+      <button class="tab-btn active" onclick="switchTab('far')">Summary FAR</button>
+      <button class="tab-btn" onclick="switchTab('canibal')">Canibal</button>
+    </div>
   </header>
 
-  <main>
-    <!-- Menu 1: Monitoring Component -->
-    <section id="monitoring" class="menu-section">
-      <h2>Monitoring Component</h2>
-      <div style="margin-bottom: 10px;">
-        <button onclick="addNewComponent()">➕ Add New Component</button>
-        <button onclick="saveToGitHubFile()">💾 Save All to GitHub</button>
-        <button onclick="loadFromGitHubFile()">🔄 Load Data from GitHub</button>
+  <!-- Summary FAR -->
+  <div id="tab-far" class="tab-content">
+    <div class="container">
+      <div class="card">
+        <h2>Tambah / Edit FAR</h2>
+        <form id="farForm">
+          <input type="text" id="far_equipment" placeholder="Equipment" required>
+          <textarea id="far_desc" placeholder="Description"></textarea>
+          <input type="date" id="far_date" required>
+          <input type="text" id="far_pic" placeholder="PIC">
+          <input type="text" id="far_remark" placeholder="Remarks">
+          <input type="file" id="far_file" accept=".png,.jpg,.jpeg,.pdf">
+          <button type="submit">Simpan FAR</button>
+        </form>
       </div>
-      <table id="componentTable">
-        <thead>
+      <div class="card">
+        <h2>Data FAR</h2>
+        <div class="table-wrapper">
+          <table>
+            <thead>
+              <tr>
+                <th>No</th><th>Equipment</th><th>Description</th><th>Date</th><th>PIC</th><th>Remarks</th><th>Picture</th><th>Actions</th>
+              </tr>
+            </thead>
+            <tbody id="farTableBody"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Canibal -->
+  <div id="tab-canibal" class="tab-content" style="display:none;">
+    <div class="container">
+      <div class="card">
+        <h2>Tambah / Edit Canibal</h2>
+        <form id="canibalForm">
+          <input type="text" id="can_equipment" placeholder="Equipment" required>
+          <input type="text" id="can_part" placeholder="Part Desc" required>
+          <input type="number" id="can_qty" placeholder="Qty" required>
+          <input type="text" id="can_from" placeholder="Equip Canibal" required>
+          <input type="date" id="can_date" required>
+          <input type="text" id="can_pic" placeholder="PIC">
+          <input type="text" id="can_remark" placeholder="Remarks">
+          <input type="file" id="can_file" accept=".png,.jpg,.jpeg,.pdf">
+          <button type="submit">Simpan Canibal</button>
+        </form>
+      </div>
+      <div class="card">
+        <h2>Data Canibal</h2>
+        <div class="table-wrapper">
+          <table>
+            <thead>
+              <tr>
+                <th>No</th><th>Equipment</th><th>Part Desc</th><th>Qty</th><th>Equip Canibal</th><th>Date</th><th>PIC</th><th>Remarks</th><th>Document</th><th>Actions</th>
+              </tr>
+            </thead>
+            <tbody id="canibalTableBody"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    // Switch tabs
+    function switchTab(tab) {
+      document.querySelectorAll('.tab-content').forEach(c => c.style.display = 'none');
+      document.getElementById('tab-' + tab).style.display = 'block';
+      document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
+      event.target.classList.add('active');
+    }
+
+    // Helpers
+    function renderFile(item) {
+      if (!item.file) return '';
+      if (item.fileName.toLowerCase().endsWith('.pdf')) {
+        return `<span class="pdf-icon">📄 PDF</span>`;
+      } else {
+        return `<img src="${item.file}" class="thumbnail">`;
+      }
+    }
+    function viewFile(file, name) {
+      if (name.toLowerCase().endsWith('.pdf')) {
+        let w = window.open("");
+        w.document.write(`<embed src="${file}" type="application/pdf" width="100%" height="100%">`);
+      } else {
+        let w = window.open("");
+        w.document.write(`<img src="${file}" style="max-width:100%">`);
+      }
+    }
+    function downloadFile(file, name) {
+      let a = document.createElement("a");
+      a.href = file;
+      a.download = name;
+      a.click();
+    }
+
+    // FAR
+    let farRecords = JSON.parse(localStorage.getItem("FAR_Data")||"[]");
+    function renderFAR() {
+      let tbody = document.getElementById("farTableBody");
+      tbody.innerHTML = "";
+      farRecords.forEach((r,i) => {
+        tbody.innerHTML += `
           <tr>
-            <th>Equipment</th><th>Model</th><th>SMCS</th><th>Component</th><th>Freq</th><th>Cost</th>
-            <th>Change Out</th><th>Next Change</th><th>SMU</th><th>Life</th><th>%</th><th>Rating</th>
-            <th>Foto</th><th>Remarks</th><th>Action</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </section>
+            <td>${i+1}</td><td>${r.equipment}</td><td>${r.desc||""}</td><td>${r.date}</td>
+            <td>${r.pic||""}</td><td>${r.remark||""}</td><td>${renderFile(r)}</td>
+            <td>
+              <button class="actions view-btn" onclick="viewFile('${r.file}','${r.fileName}')">View</button>
+              <button class="actions download-btn" onclick="downloadFile('${r.file}','${r.fileName}')">Download</button>
+              <button class="actions delete-btn" onclick="deleteRow('far',${i})">Delete</button>
+            </td>
+          </tr>`;
+      });
+    }
+    document.getElementById("farForm").addEventListener("submit", e=>{
+      e.preventDefault();
+      let obj = {
+        equipment: document.getElementById("far_equipment").value,
+        desc: document.getElementById("far_desc").value,
+        date: document.getElementById("far_date").value,
+        pic: document.getElementById("far_pic").value,
+        remark: document.getElementById("far_remark").value
+      };
+      let file = document.getElementById("far_file").files[0];
+      if (file) {
+        let reader = new FileReader();
+        reader.onload = ev=>{
+          obj.file = ev.target.result;
+          obj.fileName = file.name;
+          farRecords.push(obj);
+          localStorage.setItem("FAR_Data", JSON.stringify(farRecords));
+          renderFAR();
+          e.target.reset();
+        };
+        reader.readAsDataURL(file);
+      } else {
+        farRecords.push(obj);
+        localStorage.setItem("FAR_Data", JSON.stringify(farRecords));
+        renderFAR();
+        e.target.reset();
+      }
+    });
 
-    <!-- Menu 2: Update Current SMU -->
-    <section id="smu" class="menu-section" style="display:none;">
-      <h2>Update Current SMU</h2>
-      <form onsubmit="updateSMU(event)">
-        <input type="text" id="equipmentInput" placeholder="Equipment" required />
-        <input type="number" id="smuInput" placeholder="SMU" required />
-        <button type="submit">Update</button>
-      </form>
-    </section>
-  </main>
+    // Canibal
+    let canibalRecords = JSON.parse(localStorage.getItem("CANIBAL_Data")||"[]");
+    function renderCanibal() {
+      let tbody = document.getElementById("canibalTableBody");
+      tbody.innerHTML = "";
+      canibalRecords.forEach((r,i) => {
+        tbody.innerHTML += `
+          <tr>
+            <td>${i+1}</td><td>${r.equipment}</td><td>${r.part}</td><td>${r.qty}</td><td>${r.from}</td>
+            <td>${r.date}</td><td>${r.pic||""}</td><td>${r.remark||""}</td><td>${renderFile(r)}</td>
+            <td>
+              <button class="actions view-btn" onclick="viewFile('${r.file}','${r.fileName}')">View</button>
+              <button class="actions download-btn" onclick="downloadFile('${r.file}','${r.fileName}')">Download</button>
+              <button class="actions delete-btn" onclick="deleteRow('canibal',${i})">Delete</button>
+            </td>
+          </tr>`;
+      });
+    }
+    document.getElementById("canibalForm").addEventListener("submit", e=>{
+      e.preventDefault();
+      let obj = {
+        equipment: document.getElementById("can_equipment").value,
+        part: document.getElementById("can_part").value,
+        qty: document.getElementById("can_qty").value,
+        from: document.getElementById("can_from").value,
+        date: document.getElementById("can_date").value,
+        pic: document.getElementById("can_pic").value,
+        remark: document.getElementById("can_remark").value
+      };
+      let file = document.getElementById("can_file").files[0];
+      if (file) {
+        let reader = new FileReader();
+        reader.onload = ev=>{
+          obj.file = ev.target.result;
+          obj.fileName = file.name;
+          canibalRecords.push(obj);
+          localStorage.setItem("CANIBAL_Data", JSON.stringify(canibalRecords));
+          renderCanibal();
+          e.target.reset();
+        };
+        reader.readAsDataURL(file);
+      } else {
+        canibalRecords.push(obj);
+        localStorage.setItem("CANIBAL_Data", JSON.stringify(canibalRecords));
+        renderCanibal();
+        e.target.reset();
+      }
+    });
 
-  <script src="script.js"></script>
+    // Delete row
+    function deleteRow(type, idx) {
+      if (type==="far") {
+        farRecords.splice(idx,1);
+        localStorage.setItem("FAR_Data", JSON.stringify(farRecords));
+        renderFAR();
+      } else {
+        canibalRecords.splice(idx,1);
+        localStorage.setItem("CANIBAL_Data", JSON.stringify(canibalRecords));
+        renderCanibal();
+      }
+    }
+
+    // Init
+    renderFAR();
+    renderCanibal();
+  </script>
 </body>
 </html>
