--- a/index.html
+++ b/index.html
@@ -5,26 +5,19 @@
   <title>📑 FAR & CANIBAL</title>
   <style>
     body { font-family: Arial, sans-serif; margin:0; background:#f5f6fa; }
-    header {
-      background:#34495e; color:white; padding:10px 20px;
-      display:flex; align-items:center; justify-content:space-between;
-    }
+    header { background:#34495e; color:white; padding:10px 20px;
+      display:flex; align-items:center; justify-content:space-between; }
     header h1 { margin:0; font-size:18px; }
     .tabs { display:flex; gap:6px; }
     .tabs button {
-      padding:6px 12px; border:none; border-radius:4px;
-      cursor:pointer; font-size:13px; background:#2c3e50; color:#fff;
+      padding:6px 12px; border:none; border-radius:4px; cursor:pointer;
+      font-size:13px; background:#2c3e50; color:#fff;
     }
     .tabs button.active { background:#1abc9c; font-weight:bold; }
-    .container {
-      display:grid; grid-template-columns:1fr 2fr; gap:20px;
-      padding:15px; height:calc(100vh - 60px); box-sizing:border-box;
-    }
-    .card {
-      background:white; padding:15px; border-radius:8px;
-      box-shadow:0 4px 10px rgba(0,0,0,0.08);
-      display:flex; flex-direction:column;
-    }
+    .container { display:grid; grid-template-columns:1fr 2fr; gap:20px;
+      padding:15px; height:calc(100vh - 60px); box-sizing:border-box; }
+    .card { background:white; padding:15px; border-radius:8px;
+      box-shadow:0 4px 10px rgba(0,0,0,0.08); display:flex; flex-direction:column; }
     .card h2 { margin:0 0 10px; font-size:15px; border-bottom:1px solid #ddd; padding-bottom:6px; }
     form input, form textarea, form button {
       width:100%; padding:7px; margin-bottom:8px; border-radius:5px;
@@ -33,10 +26,8 @@
     form button { background:#34495e; color:white; border:none; cursor:pointer; }
     form button:hover { background:#2c3e50; }
     .tools { margin-bottom:8px; }
-    .tools button {
-      margin-right:5px; padding:4px 8px; font-size:12px;
-      border:none; border-radius:4px; cursor:pointer; color:white;
-    }
+    .tools button { margin-right:5px; padding:4px 8px; font-size:12px;
+      border:none; border-radius:4px; cursor:pointer; color:white; }
     .export-json { background:#16a34a; }
     .import-json { background:#2563eb; }
     .export-csv { background:#9333ea; }
@@ -47,10 +38,8 @@
     .table-wrapper { flex:1; overflow-y:auto; }
     .thumbnail { max-width:50px; max-height:40px; border-radius:4px; }
     .pdf-icon { font-size:13px; color:#e74c3c; font-weight:bold; }
-    .actions button {
-      margin:1px; padding:3px 6px; font-size:11px; border-radius:4px;
-      border:none; cursor:pointer; color:white;
-    }
+    .actions button { margin:1px; padding:3px 6px; font-size:11px; border-radius:4px;
+      border:none; cursor:pointer; color:white; }
     .view-btn { background:#3498db; }
     .download-btn { background:#9b59b6; }
     .delete-btn { background:#e74c3c; }
@@ -83,9 +72,9 @@
       <div class="card">
         <h2>Data FAR</h2>
         <div class="tools">
-          <button class="export-json" onclick="exportData('far','json')">Export JSON</button>
+          <button class="export-json" onclick="exportData('far')">Export JSON</button>
           <button class="import-json" onclick="importData('far')">Import JSON</button>
-          <button class="export-csv" onclick="exportData('far','csv')">Export CSV</button>
+          <button class="export-csv" onclick="exportCSV('far')">Export CSV</button>
           <button class="clear-btn" onclick="clearData('far')">Clear All</button>
         </div>
         <div class="table-wrapper">
@@ -120,9 +109,9 @@
       <div class="card">
         <h2>Data Canibal</h2>
         <div class="tools">
-          <button class="export-json" onclick="exportData('canibal','json')">Export JSON</button>
+          <button class="export-json" onclick="exportData('canibal')">Export JSON</button>
           <button class="import-json" onclick="importData('canibal')">Import JSON</button>
-          <button class="export-csv" onclick="exportData('canibal','csv')">Export CSV</button>
+          <button class="export-csv" onclick="exportCSV('canibal')">Export CSV</button>
           <button class="clear-btn" onclick="clearData('canibal')">Clear All</button>
         </div>
         <div class="table-wrapper">
@@ -138,26 +127,127 @@
   </div>
 
 <script>
+  // ===== IndexedDB Setup =====
+  const DB_NAME = "FAR_CANIBAL_DB";
+  const DB_VERSION = 1;
+  let db;
+
+  function openDB() {
+    return new Promise((resolve, reject) => {
+      const request = indexedDB.open(DB_NAME, DB_VERSION);
+      request.onupgradeneeded = e => {
+        db = e.target.result;
+        if (!db.objectStoreNames.contains("files")) {
+          db.createObjectStore("files", { keyPath: "id" });
+        }
+      };
+      request.onsuccess = e => { db = e.target.result; resolve(db); };
+      request.onerror = e => reject(e);
+    });
+  }
+  async function saveFileToDB(fileId, fileData) {
+    const tx = db.transaction("files", "readwrite");
+    tx.objectStore("files").put({ id: fileId, data: fileData });
+    return tx.complete;
+  }
+ function getFileFromDB(fileId) {
+  return new Promise((resolve, reject) => {
+    if (!fileId) {   // kalau kosong/null
+      resolve(null);
+      return;
+    }
+
+    const request = indexedDB.open(DB_NAME, DB_VERSION);
+
+    request.onsuccess = e => {
+      const db = e.target.result;
+      if (!db.objectStoreNames.contains("files")) {
+        resolve(null);
+        return;
+      }
+      const tx = db.transaction("files", "readonly");
+      const store = tx.objectStore("files");
+      const req = store.get(fileId);
+
+      req.onsuccess = () => resolve(req.result ? req.result.data : null);
+      req.onerror = () => reject(req.error);
+    };
+
+    request.onerror = e => reject(e);
+  });
+}
+
+function saveFileToDB(fileId, fileData) {
+  return new Promise((resolve, reject) => {
+    const request = indexedDB.open(DB_NAME, DB_VERSION);
+
+    request.onsuccess = e => {
+      const db = e.target.result;
+      const tx = db.transaction("files", "readwrite");
+      const store = tx.objectStore("files");
+      const req = store.put({ id: fileId, data: fileData });
+
+      req.onsuccess = () => resolve();
+      req.onerror = () => reject(req.error);
+    };
+
+    request.onerror = e => reject(e);
+  });
+}
+
+function clearFiles() {
+  return new Promise((resolve, reject) => {
+    const request = indexedDB.open(DB_NAME, DB_VERSION);
+
+    request.onsuccess = e => {
+      const db = e.target.result;
+      const tx = db.transaction("files", "readwrite");
+      tx.objectStore("files").clear();
+      tx.oncomplete = () => resolve();
+      tx.onerror = e => reject(e);
+    };
+
+    request.onerror = e => reject(e);
+  });
+}
+  async function clearFiles() {
+    const tx = db.transaction("files", "readwrite");
+    tx.objectStore("files").clear();
+  }
+
+  // ===== UI Logic =====
   function switchTab(tab) {
     document.querySelectorAll('.tab-content').forEach(c => c.style.display='none');
     document.getElementById('tab-'+tab).style.display='block';
     document.querySelectorAll('.tab-btn').forEach(b=>b.classList.remove('active'));
     event.target.classList.add('active');
   }
-  function renderFile(item) {
-    if (!item.file) return '';
+  function renderFileCell(item) {
+    if (!item.fileId) return '';
     return item.fileName.toLowerCase().endsWith('.pdf') ?
-      `<span class="pdf-icon">📄 PDF</span>` : `<img src="${item.file}" class="thumbnail">`;
+      `<span class="pdf-icon">📄 PDF</span>` : `<img src="" id="thumb-${item.fileId}" class="thumbnail">`;
   }
-  function viewFile(file,name){
-    if(!file) return;
+  async function loadThumbnail(fileId, fileName) {
+    const data = await getFileFromDB(fileId);
+    if (data && !fileName.toLowerCase().endsWith('.pdf')) {
+      document.getElementById("thumb-"+fileId).src = data;
+    }
+  }
+  async function viewFile(fileId, fileName) {
+    const data = await getFileFromDB(fileId);
+    if (!data) return;
     let w=window.open("");
-    if(name.toLowerCase().endsWith('.pdf')) {
-      w.document.write(`<embed src="${file}" type="application/pdf" width="100%" height="100%">`);
-    } else { w.document.write(`<img src="${file}" style="max-width:100%">`);}
+    if(fileName.toLowerCase().endsWith('.pdf')) {
+      w.document.write(`<embed src="${data}" type="application/pdf" width="100%" height="100%">`);
+    } else {
+      w.document.write(`<img src="${data}" style="max-width:100%">`);
+    }
   }
-  function downloadFile(file,name){
-    let a=document.createElement("a"); a.href=file; a.download=name; a.click();
+  async function downloadFile(fileId, fileName) {
+    const data = await getFileFromDB(fileId);
+    if (!data) return;
+    let a=document.createElement("a");
+    a.href=data; a.download=fileName; a.click();
   }
   function deleteRow(type,i){
     let key=type==="far"?"FAR_Data":"CANIBAL_Data";
@@ -165,100 +255,153 @@
     records.splice(i,1); localStorage.setItem(key,JSON.stringify(records));
     type==="far"?renderFAR():renderCanibal();
   }
-  // FAR
-  let farRecords=JSON.parse(localStorage.getItem("FAR_Data")||"[]");
+
+  // ===== FAR =====
+  let farRecords=[];
   function renderFAR(){
+    farRecords=JSON.parse(localStorage.getItem("FAR_Data")||"[]");
     let tbody=document.getElementById("farTableBody"); tbody.innerHTML="";
     farRecords.forEach((r,i)=>{
       tbody.innerHTML+=`
-      <tr>
-        <td>${i+1}</td><td>${r.equipment}</td><td>${r.desc||""}</td><td>${r.date}</td>
-        <td>${r.pic||""}</td><td>${r.remark||""}</td><td>${renderFile(r)}</td>
-        <td>
-          <button class="view-btn" onclick="viewFile('${r.file}','${r.fileName}')">View</button>
-          <button class="download-btn" onclick="downloadFile('${r.file}','${r.fileName}')">Download</button>
-          <button class="delete-btn" onclick="deleteRow('far',${i})">Delete</button>
-        </td>
-      </tr>`; });
+        <tr>
+          <td>${i+1}</td><td>${r.equipment}</td><td>${r.desc||""}</td><td>${r.date}</td>
+          <td>${r.pic||""}</td><td>${r.remark||""}</td><td>${renderFileCell(r)}</td>
+          <td>
+            <button class="view-btn" onclick="viewFile('${r.fileId}','${r.fileName}')">View</button>
+            <button class="download-btn" onclick="downloadFile('${r.fileId}','${r.fileName}')">Download</button>
+            <button class="delete-btn" onclick="deleteRow('far',${i})">Delete</button>
+          </td>
+        </tr>`;
+      loadThumbnail(r.fileId,r.fileName);
+    });
   }
-  document.getElementById("farForm").addEventListener("submit",e=>{
-    e.preventDefault(); let obj={
+  farForm.addEventListener("submit",async e=>{
+    e.preventDefault();
+    let obj={
       equipment:far_equipment.value, desc:far_desc.value, date:far_date.value,
-      pic:far_pic.value, remark:far_remark.value
-    }; let file=far_file.files[0];
-    if(file){let reader=new FileReader(); reader.onload=ev=>{
-      obj.file=ev.target.result; obj.fileName=file.name;
-      farRecords.push(obj); localStorage.setItem("FAR_Data",JSON.stringify(farRecords));
-      renderFAR(); e.target.reset(); }; reader.readAsDataURL(file);}
-    else{farRecords.push(obj); localStorage.setItem("FAR_Data",JSON.stringify(farRecords));
-      renderFAR(); e.target.reset();}
+      pic:far_pic.value, remark:far_remark.value, fileId:null, fileName:null
+    };
+    let file=far_file.files[0];
+    if(file){
+      let reader=new FileReader();
+      reader.onload=async ev=>{
+        obj.fileId=Date.now()+"_"+file.name;
+        obj.fileName=file.name;
+        await saveFileToDB(obj.fileId, ev.target.result);
+        farRecords.push(obj);
+        localStorage.setItem("FAR_Data",JSON.stringify(farRecords));
+        renderFAR(); e.target.reset();
+      };
+      reader.readAsDataURL(file);
+    } else {
+      farRecords.push(obj);
+      localStorage.setItem("FAR_Data",JSON.stringify(farRecords));
+      renderFAR(); e.target.reset();
+    }
   });
-  // Canibal
-  let canibalRecords=JSON.parse(localStorage.getItem("CANIBAL_Data")||"[]");
+
+  // ===== Canibal =====
+  let canibalRecords=[];
   function renderCanibal(){
+    canibalRecords=JSON.parse(localStorage.getItem("CANIBAL_Data")||"[]");
     let tbody=document.getElementById("canibalTableBody"); tbody.innerHTML="";
     canibalRecords.forEach((r,i)=>{
       tbody.innerHTML+=`
-      <tr>
-        <td>${i+1}</td><td>${r.equipment}</td><td>${r.part}</td><td>${r.qty}</td><td>${r.from}</td>
-        <td>${r.date}</td><td>${r.pic||""}</td><td>${r.remark||""}</td><td>${renderFile(r)}</td>
-        <td>
-          <button class="view-btn" onclick="viewFile('${r.file}','${r.fileName}')">View</button>
-          <button class="download-btn" onclick="downloadFile('${r.file}','${r.fileName}')">Download</button>
-          <button class="delete-btn" onclick="deleteRow('canibal',${i})">Delete</button>
-        </td>
-      </tr>`; });
+        <tr>
+          <td>${i+1}</td><td>${r.equipment}</td><td>${r.part}</td><td>${r.qty}</td><td>${r.from}</td>
+          <td>${r.date}</td><td>${r.pic||""}</td><td>${r.remark||""}</td><td>${renderFileCell(r)}</td>
+          <td>
+            <button class="view-btn" onclick="viewFile('${r.fileId}','${r.fileName}')">View</button>
+            <button class="download-btn" onclick="downloadFile('${r.fileId}','${r.fileName}')">Download</button>
+            <button class="delete-btn" onclick="deleteRow('canibal',${i})">Delete</button>
+          </td>
+        </tr>`;
+      loadThumbnail(r.fileId,r.fileName);
+    });
   }
-  document.getElementById("canibalForm").addEventListener("submit",e=>{
-    e.preventDefault(); let obj={
-      equipment:can_equipment.value, part:can_part.value, qty:can_qty.value,
-      from:can_from.value, date:can_date.value, pic:can_pic.value, remark:can_remark.value
-    }; let file=can_file.files[0];
-    if(file){let reader=new FileReader(); reader.onload=ev=>{
-      obj.file=ev.target.result; obj.fileName=file.name;
-      canibalRecords.push(obj); localStorage.setItem("CANIBAL_Data",JSON.stringify(canibalRecords));
-      renderCanibal(); e.target.reset(); }; reader.readAsDataURL(file);}
-    else{canibalRecords.push(obj); localStorage.setItem("CANIBAL_Data",JSON.stringify(canibalRecords));
-      renderCanibal(); e.target.reset();}
-  });
-  // Export / Import / Clear
-  function exportData(type,format){
-    let key=type==="far"?"FAR_Data":"CANIBAL_Data";
-    let data=localStorage.getItem(key)||"[]";
-    if(format==="json"){
-      let blob=new Blob([data],{type:"application/json"});
-      let a=document.createElement("a"); a.href=URL.createObjectURL(blob);
-      a.download=key+".json"; a.click();
-    } else { // CSV
-      let arr=JSON.parse(data); if(!arr.length) return;
-      let headers=Object.keys(arr[0]); let csv=headers.join(",")+"\n";
-      arr.forEach(r=>{csv+=headers.map(h=>JSON.stringify(r[h]||"")).join(",")+"\n";});
-      let blob=new Blob([csv],{type:"text/csv"});
-      let a=document.createElement("a"); a.href=URL.createObjectURL(blob);
-      a.download=key+".csv"; a.click();
+  canibalForm.addEventListener("submit",async e=>{
+    e.preventDefault();
+    let obj={
+      equipment:can_equipment.value, part:can_part.value, qty:can_qty.value, from:can_from.value,
+      date:can_date.value, pic:can_pic.value, remark:can_remark.value, fileId:null, fileName:null
+    };
+    let file=can_file.files[0];
+    if(file){
+      let reader=new FileReader();
+      reader.onload=async ev=>{
+        obj.fileId=Date.now()+"_"+file.name;
+        obj.fileName=file.name;
+        await saveFileToDB(obj.fileId, ev.target.result);
+        canibalRecords.push(obj);
+        localStorage.setItem("CANIBAL_Data",JSON.stringify(canibalRecords));
+        renderCanibal(); e.target.reset();
+      };
+      reader.readAsDataURL(file);
+    } else {
+      canibalRecords.push(obj);
+      localStorage.setItem("CANIBAL_Data",JSON.stringify(canibalRecords));
+      renderCanibal(); e.target.reset();
     }
+  });
+
+  // ===== Export / Import / Clear =====
+  async function exportData(type){
+    let key=type==="far"?"FAR_Data":"CANIBAL_Data";
+    let records=JSON.parse(localStorage.getItem(key)||"[]");
+    for(let r of records){
+      if(r.fileId){
+        r.fileData=await getFileFromDB(r.fileId);
+      }
+    }
+    let blob=new Blob([JSON.stringify(records)],{type:"application/json"});
+    let a=document.createElement("a");
+    a.href=URL.createObjectURL(blob); a.download=key+".json"; a.click();
   }
   function importData(type){
     let key=type==="far"?"FAR_Data":"CANIBAL_Data";
     let input=document.createElement("input"); input.type="file"; input.accept=".json";
     input.onchange=e=>{
       let file=e.target.files[0]; if(!file) return;
-      let reader=new FileReader(); reader.onload=ev=>{
-        localStorage.setItem(key,ev.target.result);
-        if(type==="far"){farRecords=JSON.parse(ev.target.result); renderFAR();}
-        else{canibalRecords=JSON.parse(ev.target.result); renderCanibal();}
-      }; reader.readAsText(file);
-    }; input.click();
+      let reader=new FileReader();
+      reader.onload=async ev=>{
+        let records=JSON.parse(ev.target.result);
+        for(let r of records){
+          if(r.fileData && r.fileId){
+            await saveFileToDB(r.fileId,r.fileData);
+            delete r.fileData;
+          }
+        }
+        localStorage.setItem(key,JSON.stringify(records));
+        type==="far"?renderFAR():renderCanibal();
+      };
+      reader.readAsText(file);
+    };
+    input.click();
   }
-  function clearData(type){
+  function exportCSV(type){
+    let key=type==="far"?"FAR_Data":"CANIBAL_Data";
+    let records=JSON.parse(localStorage.getItem(key)||"[]");
+    if(!records.length) return;
+    let headers=Object.keys(records[0]).filter(h=>h!=="fileId"&&h!=="fileData");
+    let csv=headers.join(",")+"\n";
+    records.forEach(r=>{
+      csv+=headers.map(h=>JSON.stringify(r[h]||"")).join(",")+"\n";
+    });
+    let blob=new Blob([csv],{type:"text/csv"});
+    let a=document.createElement("a");
+    a.href=URL.createObjectURL(blob); a.download=key+".csv"; a.click();
+  }
+  async function clearData(type){
     let key=type==="far"?"FAR_Data":"CANIBAL_Data";
     if(confirm("Yakin hapus semua data "+type.toUpperCase()+" ?")){
       localStorage.removeItem(key);
-      if(type==="far"){farRecords=[]; renderFAR();} else {canibalRecords=[]; renderCanibal();}
+      await clearFiles();
+      type==="far"?renderFAR():renderCanibal();
     }
   }
+
   // Init
-  renderFAR(); renderCanibal();
+  openDB().then(()=>{ renderFAR(); renderCanibal(); });
 </script>
 </body>
 </html>
