--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         <h2 id="damageFormTitle">Tambah Damage</h2>
         <form id="damageForm">
           <input type="text" id="can_equipment" placeholder="Equipment" required>
+          <input type="text" id="can_partn" placeholder="Part Number" required>
           <input type="text" id="can_part" placeholder="Part Desc" required>
           <input type="number" id="can_qty" placeholder="Qty" required>
           <input type="date" id="can_date" required>
@@ -162,7 +163,7 @@
         <div class="table-wrapper">
           <table>
             <thead>
-              <tr><th>No</th><th>Equipment</th><th>Part Desc</th><th>Qty</th><th>Equip Canibal</th><th>Date</th><th>PIC</th><th>Remarks</th><th>Status</th><th>Document</th><th>Actions</th></tr>
+              <tr><th>No</th><th>Equipment</th><th>Part Number</th><th>Part Desc</th><th>Qty</th><th>Date</th><th>PIC</th><th>Remarks</th><th>Status</th><th>Document</th><th>Actions</th></tr>
             </thead>
             <tbody id="damageTableBody"></tbody>
           </table>
@@ -316,3 +317,4 @@
 </script>
 </body>
 </html>
+
