--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <h2 id="canibalFormTitle">Tambah Canibal</h2>
         <form id="canibalForm">
           <input type="text" id="can_equipment" placeholder="Equipment" required>
+          <input type="text" id="can_partn" placeholder="Part Number" required>
           <input type="text" id="can_part" placeholder="Part Desc" required>
           <input type="number" id="can_qty" placeholder="Qty" required>
           <input type="text" id="can_from" placeholder="Equip Canibal" required>
@@ -123,7 +124,7 @@
         <div class="table-wrapper">
           <table>
             <thead>
-              <tr><th>No</th><th>Equipment</th><th>Part Desc</th><th>Qty</th><th>Equip Canibal</th><th>Date</th><th>PIC</th><th>Remarks</th><th>Status</th><th>Document</th><th>Actions</th></tr>
+              <tr><th>No</th><th>Equipment</th><th>Part Number</th><th>Part Desc</th><th>Qty</th><th>Equip Canibal</th><th>Date</th><th>PIC</th><th>Remarks</th><th>Status</th><th>Document</th><th>Actions</th></tr>
             </thead>
             <tbody id="canibalTableBody"></tbody>
           </table>
@@ -317,4 +318,5 @@
 </script>
 </body>
 </html>
+
 
